feat: allow users to change password
